# volo-ai

./: .example-commands.yaml  .example-screeps.yaml  .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml  rustfmt.toml
js_src/: main.js
js_tools/: deploy.js
src/: colony.rs  globals.rs  lib.rs  logging.rs  movement.rs  resources.rs  rooms.rs  statistics.rs  units.rs  utils.rs
src/colony/: events.rs  orders.rs
src/colony/orders/: caravan.rs  deposit.rs  powerbank.rs  protect.rs  resource.rs  withdraw.rs
src/movement/: callback.rs  goal.rs  path_state.rs  walker.rs
src/resources/: chain_config.rs  handlers.rs  policy.rs
src/rooms/: shelter.rs  state.rs  wrappers.rs
src/rooms/state/: constructions.rs  requests.rs
src/rooms/state/constructions/: blueprints.rs  farm.rs  owned.rs  xy_util.rs
src/rooms/state/constructions/owned/: central.rs  controller.rs  extensions.rs  mineral.rs  observer.rs  polygon.rs  ramparts.rs  roads.rs  sources.rs  spawns.rs  towers.rs
src/rooms/state/requests/: assignment.rs  data.rs  meta.rs
src/rooms/state/requests/data/: begin_farm.rs  book.rs  build.rs  caravan.rs  carry.rs  claim.rs  crash.rs  defend.rs  deposit.rs  destroy.rs  dismantle.rs  factory.rs  lab.rs  lrw.rs  pickup.rs  power_bank.rs  protect.rs  pull.rs  repair.rs  safe_mode.rs  transfer.rs  withdraw.rs
src/rooms/wrappers/: claimed.rs  farm.rs  neutral.rs
src/rooms/wrappers/claimed/: prelude.rs  structures.rs
src/rooms/wrappers/claimed/structures/: containers.rs  factory.rs  labs.rs  links.rs  nuker.rs  observer.rs  power_spawn.rs  ramparts.rs  spawn.rs  terminal.rs  tower.rs
src/units/: actions.rs  creeps.rs  power_creep.rs  roles.rs  tasks.rs
src/units/actions/: enable_controller.rs  fortify.rs  generate_ops.rs  operate_controller.rs  operate_factory.rs  operate_mineral.rs  operate_source.rs  operate_spawn.rs  operate_storage.rs  operate_tower.rs  renew.rs  transfer.rs  withdraw.rs
src/units/roles/: combat.rs  haulers.rs  miners.rs  services.rs  teams.rs
src/units/roles/combat/: defender.rs  destroyer.rs  fighter.rs  guard.rs  overseer.rs
src/units/roles/haulers/: carrier.rs  hauler.rs  score_carrier.rs
src/units/roles/miners/: miner.rs  mineral_miner.rs  sk_miner.rs
src/units/roles/services/: booker.rs  conqueror.rs  dh.rs  dismantler.rs  handyman.rs  healer.rs  house_keeper.rs  puller.rs  remote_upgrader.rs  scout.rs  trader.rs  upgrader.rs
src/units/roles/teams/: com_d.rs  com_h.rs  dep_hauler.rs  dep_miner.rs  pb_a.rs  pb_c.rs  pb_h.rs
src/units/tasks/: boost.rs  build.rs  combat.rs  deposit.rs  dismantle.rs  escape.rs  harvest.rs  logistics.rs  powerbank.rs  repair.rs  reservation.rs  support.rs  upgrade.rs
src/utils/: commons.rs  constants.rs
