[package]
name = "volo-ai"
version = "0.0.1"
authors = []
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
arrayvec = { version="0.4", features = ["serde"] }
js-sys = "0.3"
log = "0.4"
fern = "0.6"
enum_dispatch = "0.3.13"
# screeps-game-api = { version = "0.21.3", features = ["seasonal-season-1", "mmo"] }
# screeps-game-api = { path = "../../screeps/screeps-game-api/", features = ["mmo"]  }
screeps-game-api = { version = "0.23.1", features = ["mmo"] }
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["custom"] }
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.5.0"
itertools = "0.13.0"
regex = "1.11.1"
smallvec = "1.15.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
thiserror = "2.0.17"
modular-bitfield = "0.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
# wasm-opt = ["-O4", "--signext-lowering"]
wasm-opt = ["-O4", "--disable-sign-ext"]

[features]
default = ["mmo", "path-visuals"]

path-visuals = []
sim = ["screeps-game-api/sim"]
mmo = ["screeps-game-api/mmo"]
