[package]
name = "volo-ai"
version = "0.0.1"
authors = []
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
arrayvec = { version="0.4", features = ["serde"] }
js-sys = "0.3"
log = "0.4"
fern = "0.6"
enum_dispatch = "0.3.13"
# screeps-game-api = { version = "0.21.3", features = ["seasonal-season-1", "mmo"] }
# screeps-game-api = { path = "../../screeps/screeps-game-api/", features = ["mmo"]  }
screeps-game-api = { version = "0.23.1", features = ["mmo"] }
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["custom"] }
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.5.0"
itertools = "0.13.0"
regex = "1.11.1"
smallvec = "1.15.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
thiserror = "2.0.17"
modular-bitfield = "0.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
# wasm-opt = ["-O4", "--signext-lowering"]
wasm-opt = ["-O4", "--disable-sign-ext"]

[features]
default = ["mmo", "path-visuals"]

path-visuals = []
sim = ["screeps-game-api/sim"]
mmo = ["screeps-game-api/mmo"]

# https://rust-lang.github.io/rust-clippy/master/index.html#lint-groups
# https://rust-lang.github.io/rust-clippy/master/#configuration
[lints.clippy]
all = "warn"
# pedantic = "warn"

unnecessary_semicolon = "warn"
match_same_arms = "warn"
needless_return = "warn"
manual_assert = "warn"
missing_panics_doc = "warn"
semicolon_if_nothing_returned = "warn"
cast_possible_wrap = "warn"
trivially_copy_pass_by_ref = "warn"
needless_pass_by_value = "warn"
uninlined_format_args = "warn"
ignored_unit_patterns = "warn"
too_many_lines = "warn"
match_wildcard_for_single_variants = "warn"
cast_sign_loss = "warn"
single_match_else = "warn"
cloned_instead_of_copied = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
elidable_lifetime_names = "warn"
unused_self = "warn"
inconsistent_struct_constructor = "warn"
range_plus_one = "warn"
# nursery = "warn"

# candidates to experiment with:

# control-flow / style
if_not_else = "warn"
match_bool = "warn"
match_like_matches_macro = "warn"
manual_strip = "warn"
manual_is_ascii_check = "warn"
manual_map = "warn"

# option/result combinators
map_unwrap_or = "warn"
map_flatten = "warn"
bind_instead_of_map = "warn"

# API / signatures (these are often annoying)
unnecessary_wraps = "warn"
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_const_for_fn = "warn"

# allocations / clones
unnecessary_to_owned = "warn"
redundant_clone = "warn"
iter_not_returning_iterator = "warn"

# imports / modules
wildcard_imports = "warn"
module_name_repetitions = "warn"

# naming / readability
similar_names = "warn"
enum_variant_names = "warn"
struct_excessive_bools = "warn"

# collections / misc
inefficient_to_string = "warn"
string_add_assign = "warn"
string_from_utf8_as_bytes = "warn"